Grammar/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones_g
Rule 2     instrucciones_g -> instrucciones_g instruccion_g
Rule 3     instrucciones_g -> instruccion_g
Rule 4     instruccion_g -> declaracion PCOMA
Rule 5     instruccion_g -> asignacion PCOMA
Rule 6     instruccion_g -> print PCOMA
Rule 7     instruccion_g -> if
Rule 8     instruccion_g -> while
Rule 9     instrucciones_l -> instrucciones_l instruccion_l
Rule 10    instrucciones_l -> instruccion_l
Rule 11    instruccion_l -> print PCOMA
Rule 12    instruccion_l -> declaracion PCOMA
Rule 13    instruccion_l -> asignacion PCOMA
Rule 14    instruccion_l -> llamada PCOMA
Rule 15    instruccion_l -> expstruct PCOMA
Rule 16    instruccion_l -> ID PUNTO exp_native PCOMA
Rule 17    instruccion_l -> sentencia
Rule 18    instruccion_l -> transferencia
Rule 19    instruccion_l -> transferencia PCOMA
Rule 20    funcion -> FN ID LPAR lista_parametros RPAR ARROW tipo_var statement
Rule 21    funcion -> FN ID LPAR lista_parametros RPAR statement
Rule 22    funcion -> FN ID LPAR RPAR ARROW tipo_var statement
Rule 23    funcion -> FN ID LPAR RPAR statement
Rule 24    modulo -> MOD ID mod_statement
Rule 25    mod_statement -> LLLAV instrucciones_mod RLLAV
Rule 26    mod_statement -> LLLAV RLLAV
Rule 27    instrucciones_mod -> instrucciones_mod instruccion_mod
Rule 28    instrucciones_mod -> instruccion_mod
Rule 29    instruccion_mod -> PUB modulo
Rule 30    instruccion_mod -> PUB struct
Rule 31    instruccion_mod -> PUB funcion
Rule 32    instruccion_mod -> modulo
Rule 33    instruccion_mod -> struct
Rule 34    instruccion_mod -> funcion
Rule 35    struct -> STRUCT ID LLLAV lista_var RLLAV
Rule 36    struct -> STRUCT ID LLLAV RLLAV
Rule 37    sentencia -> if
Rule 38    sentencia -> match
Rule 39    sentencia -> loop
Rule 40    sentencia -> while
Rule 41    sentencia -> for
Rule 42    if -> IF exp statement else
Rule 43    else -> ELSE statement
Rule 44    else -> ELSE if
Rule 45    else -> epsilon
Rule 46    epsilon -> <empty>
Rule 47    match -> MATCH exp match_statement
Rule 48    match_statement -> LLLAV lista_brazos RLLAV
Rule 49    match_statement -> LLLAV RLLAV
Rule 50    lista_brazos -> lista_brazos brazo
Rule 51    lista_brazos -> brazo
Rule 52    brazo -> lista_exp_brazos ARROW2 instruccion_match COMA
Rule 53    brazo -> lista_exp_brazos ARROW2 statement COMA
Rule 54    brazo -> lista_exp_brazos ARROW2 statement
Rule 55    lista_exp_brazos -> lista_exp_brazos ORSINGLE exp
Rule 56    lista_exp_brazos -> exp
Rule 57    instruccion_match -> print
Rule 58    instruccion_match -> llamada
Rule 59    instruccion_match -> asignacion
Rule 60    instruccion_match -> sentencia
Rule 61    instruccion_match -> transferencia
Rule 62    loop -> LOOP statement
Rule 63    while -> WHILE exp statement
Rule 64    for -> FOR ID IN foriterative statement
Rule 65    foriterative -> exp PUNTO PUNTO exp
Rule 66    foriterative -> exp
Rule 67    transferencia -> CONTINUE
Rule 68    transferencia -> BREAK
Rule 69    transferencia -> BREAK auxexp
Rule 70    transferencia -> RETURN
Rule 71    transferencia -> RETURN auxexp
Rule 72    transferencia -> auxexp
Rule 73    statement -> LLLAV instrucciones_l RLLAV
Rule 74    statement -> LLLAV RLLAV
Rule 75    lista_var -> lista_var COMA PUB ID DPUNTOS tipo_var
Rule 76    lista_var -> lista_var COMA ID DPUNTOS tipo_var
Rule 77    lista_var -> PUB ID DPUNTOS tipo_var
Rule 78    lista_var -> ID DPUNTOS tipo_var
Rule 79    lista_parametros -> lista_parametros COMA asignacion_simple
Rule 80    lista_parametros -> asignacion_simple
Rule 81    declaracion -> LET asignacion_simple IGUAL auxexp
Rule 82    declaracion -> LET MUT asignacion
Rule 83    declaracion -> LET asignacion
Rule 84    asignacion -> ID IGUAL auxexp
Rule 85    asignacion -> ID lista_assign2 IGUAL auxexp
Rule 86    asignacion -> ID lista_arr IGUAL auxexp
Rule 87    asignacion -> ID lista_arr lista_assign2 IGUAL auxexp
Rule 88    lista_assign2 -> lista_assign2 PUNTO ID
Rule 89    lista_assign2 -> PUNTO ID
Rule 90    lista_assign -> lista_assign PUNTO ID
Rule 91    lista_assign -> ID
Rule 92    lista_acc -> lista_acc PUNTO ID
Rule 93    lista_acc -> lista_acc PUNTO exp_native
Rule 94    lista_acc -> auxacc
Rule 95    auxacc -> exparr
Rule 96    auxacc -> ID
Rule 97    lista_arr -> lista_arr LCOR auxexp RCOR
Rule 98    lista_arr -> LCOR auxexp RCOR
Rule 99    lista_exp -> lista_exp COMA auxexp
Rule 100   lista_exp -> auxexp
Rule 101   asignacion_simple -> ID DPUNTOS tipo_var
Rule 102   asignacion_simple -> MUT ID DPUNTOS tipo_var
Rule 103   asignacion_simple -> ID DPUNTOS ANDSINGLE tipo_var
Rule 104   asignacion_simple -> MUT ID DPUNTOS ANDSINGLE tipo_var
Rule 105   asignacion_simple -> ID DPUNTOS ANDSINGLE MUT tipo_var
Rule 106   asignacion_simple -> MUT ID DPUNTOS ANDSINGLE MUT tipo_var
Rule 107   lista_arr2 -> LCOR tipo_var PCOMA exp RCOR
Rule 108   auxexp -> expstruct
Rule 109   auxexp -> exp
Rule 110   exp -> LPAR exp RPAR
Rule 111   exp -> expmath
Rule 112   exp -> expop
Rule 113   exp -> exprel
Rule 114   exp -> exparr
Rule 115   exp -> newarray
Rule 116   exp -> expvec
Rule 117   exp -> exparam
Rule 118   exp -> exppow
Rule 119   exp -> expcast
Rule 120   exp -> lista_acc
Rule 121   exp -> llamada
Rule 122   exp -> sentencia
Rule 123   exp -> valores
Rule 124   exp -> exp PUNTO exp_native
Rule 125   expmath -> exp MAS exp
Rule 126   expmath -> exp MENOS exp
Rule 127   expmath -> exp MULTIPLICACION exp
Rule 128   expmath -> exp DIVISION exp
Rule 129   expmath -> exp MODULO exp
Rule 130   expmath -> MENOS exp
Rule 131   exppow -> I64 DPUNTOS DPUNTOS POW LPAR exp COMA exp RPAR
Rule 132   exppow -> F64 DPUNTOS DPUNTOS POWF LPAR exp COMA exp RPAR
Rule 133   expop -> exp AND exp
Rule 134   expop -> exp OR exp
Rule 135   expop -> AD exp
Rule 136   expcast -> exp AS tipo_var
Rule 137   exprel -> exp IGUALI exp
Rule 138   exprel -> exp DIF exp
Rule 139   exprel -> exp MAYOR exp
Rule 140   exprel -> exp MENOR exp
Rule 141   exprel -> exp MAYORI exp
Rule 142   exprel -> exp MENORI exp
Rule 143   expstruct -> lista_classtype LLLAV lista_att RLLAV
Rule 144   expstruct -> lista_classtype LLLAV RLLAV
Rule 145   expstruct -> lista_classtype DPUNTOS DPUNTOS llamada
Rule 146   lista_att -> lista_att COMA ID DPUNTOS auxexp
Rule 147   lista_att -> ID DPUNTOS auxexp
Rule 148   exparam -> MUT ID
Rule 149   exparam -> MUT valores
Rule 150   exparam -> ANDSINGLE MUT ID
Rule 151   exparam -> ANDSINGLE MUT valores
Rule 152   exparr -> ID lista_arr
Rule 153   expvec -> VEC AD newarray
Rule 154   expvec -> VECTOR DPUNTOS DPUNTOS exp_natarr
Rule 155   newarray -> LCOR lista_exp RCOR
Rule 156   newarray -> LCOR auxexp PCOMA exp RCOR
Rule 157   valores -> ENTERO
Rule 158   valores -> DECIMAL
Rule 159   valores -> CADENA
Rule 160   valores -> BOOLEANO
Rule 161   valores -> CARACTER
Rule 162   tipo_var -> I64
Rule 163   tipo_var -> F64
Rule 164   tipo_var -> STRING
Rule 165   tipo_var -> ANDSINGLE aSTR
Rule 166   tipo_var -> BOOL
Rule 167   tipo_var -> CHAR
Rule 168   tipo_var -> USIZE
Rule 169   tipo_var -> lista_arr2
Rule 170   tipo_var -> LCOR tipo_var RCOR
Rule 171   tipo_var -> lista_classtype
Rule 172   tipo_var -> VECTOR MENOR tipo_var MAYOR
Rule 173   tipo_var -> VECTOR MENOR lista_classtype MAYOR
Rule 174   lista_classtype -> lista_classtype DPUNTOS DPUNTOS ID
Rule 175   lista_classtype -> ID
Rule 176   llamada -> ID LPAR RPAR
Rule 177   llamada -> ID LPAR lista_exp RPAR
Rule 178   exp_native -> TOSTRING LPAR RPAR
Rule 179   exp_native -> TOOWNED LPAR RPAR
Rule 180   exp_native -> CLONE LPAR RPAR
Rule 181   exp_native -> LEN LPAR RPAR
Rule 182   exp_native -> CAPACITY LPAR RPAR
Rule 183   exp_native -> REMOVE LPAR auxexp RPAR
Rule 184   exp_native -> CONTAINS LPAR ANDSINGLE auxexp RPAR
Rule 185   exp_native -> PUSH LPAR auxexp RPAR
Rule 186   exp_native -> INSERT LPAR lista_exp RPAR
Rule 187   exp_native -> CHARS LPAR RPAR
Rule 188   exp_native -> SQRT LPAR RPAR
Rule 189   exp_native -> ABS LPAR RPAR
Rule 190   exp_natarr -> NEW LPAR RPAR
Rule 191   exp_natarr -> WITHCAPACITY LPAR exp RPAR
Rule 192   print -> PRINT AD LPAR lista_exp RPAR

Terminals, with rules where they appear

ABS                  : 189
AD                   : 135 153 192
AND                  : 133
ANDSINGLE            : 103 104 105 106 150 151 165 184
ARROW                : 20 22
ARROW2               : 52 53 54
AS                   : 136
BOOL                 : 166
BOOLEANO             : 160
BREAK                : 68 69
CADENA               : 159
CAPACITY             : 182
CARACTER             : 161
CHAR                 : 167
CHARS                : 187
CLONE                : 180
COMA                 : 52 53 75 76 79 99 131 132 146
CONTAINS             : 184
CONTINUE             : 67
DECIMAL              : 158
DIF                  : 138
DIVISION             : 128
DPUNTOS              : 75 76 77 78 101 102 103 104 105 106 131 131 132 132 145 145 146 147 154 154 174 174
ELSE                 : 43 44
ENTERO               : 157
F64                  : 132 163
FN                   : 20 21 22 23
FOR                  : 64
I64                  : 131 162
ID                   : 16 20 21 22 23 24 35 36 64 75 76 77 78 84 85 86 87 88 89 90 91 92 96 101 102 103 104 105 106 146 147 148 150 152 174 175 176 177
IF                   : 42
IGUAL                : 81 84 85 86 87
IGUALI               : 137
IN                   : 64
INSERT               : 186
LCOR                 : 97 98 107 155 156 170
LEN                  : 181
LET                  : 81 82 83
LLLAV                : 25 26 35 36 48 49 73 74 143 144
LOOP                 : 62
LPAR                 : 20 21 22 23 110 131 132 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 192
MAS                  : 125
MATCH                : 47
MAYOR                : 139 172 173
MAYORI               : 141
MENOR                : 140 172 173
MENORI               : 142
MENOS                : 126 130
MOD                  : 24
MODULO               : 129
MULTIPLICACION       : 127
MUT                  : 82 102 104 105 106 106 148 149 150 151
NEW                  : 190
OR                   : 134
ORSINGLE             : 55
PCOMA                : 4 5 6 11 12 13 14 15 16 19 107 156
POW                  : 131
POWF                 : 132
PRINT                : 192
PUB                  : 29 30 31 75 77
PUNTO                : 16 65 65 88 89 90 92 93 124
PUSH                 : 185
RCOR                 : 97 98 107 155 156 170
REMOVE               : 183
RETURN               : 70 71
RLLAV                : 25 26 35 36 48 49 73 74 143 144
RPAR                 : 20 21 22 23 110 131 132 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 192
SQRT                 : 188
STRING               : 164
STRUCT               : 35 36
TOOWNED              : 179
TOSTRING             : 178
USIZE                : 168
VEC                  : 153
VECTOR               : 154 172 173
WHILE                : 63
WITHCAPACITY         : 191
aSTR                 : 165
error                : 

Nonterminals, with rules where they appear

asignacion           : 5 13 59 82 83
asignacion_simple    : 79 80 81
auxacc               : 94
auxexp               : 69 71 72 81 84 85 86 87 97 98 99 100 146 147 156 183 184 185
brazo                : 50 51
declaracion          : 4 12
else                 : 42
epsilon              : 45
exp                  : 42 47 55 56 63 65 65 66 107 109 110 124 125 125 126 126 127 127 128 128 129 129 130 131 131 132 132 133 133 134 134 135 136 137 137 138 138 139 139 140 140 141 141 142 142 156 191
exp_natarr           : 154
exp_native           : 16 93 124
exparam              : 117
exparr               : 95 114
expcast              : 119
expmath              : 111
expop                : 112
exppow               : 118
exprel               : 113
expstruct            : 15 108
expvec               : 116
for                  : 41
foriterative         : 64
funcion              : 31 34
if                   : 7 37 44
init                 : 0
instruccion_g        : 2 3
instruccion_l        : 9 10
instruccion_match    : 52
instruccion_mod      : 27 28
instrucciones_g      : 1 2
instrucciones_l      : 9 73
instrucciones_mod    : 25 27
lista_acc            : 92 93 120
lista_arr            : 86 87 97 152
lista_arr2           : 169
lista_assign         : 90
lista_assign2        : 85 87 88
lista_att            : 143 146
lista_brazos         : 48 50
lista_classtype      : 143 144 145 171 173 174
lista_exp            : 99 155 177 186 192
lista_exp_brazos     : 52 53 54 55
lista_parametros     : 20 21 79
lista_var            : 35 75 76
llamada              : 14 58 121 145
loop                 : 39
match                : 38
match_statement      : 47
mod_statement        : 24
modulo               : 29 32
newarray             : 115 153
print                : 6 11 57
sentencia            : 17 60 122
statement            : 20 21 22 23 42 43 53 54 62 63 64
struct               : 30 33
tipo_var             : 20 22 75 76 77 78 101 102 103 104 105 106 107 136 170 172
transferencia        : 18 19 61
valores              : 123 149 151
while                : 8 40

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones_g
    (2) instrucciones_g -> . instrucciones_g instruccion_g
    (3) instrucciones_g -> . instruccion_g
    (4) instruccion_g -> . declaracion PCOMA
    (5) instruccion_g -> . asignacion PCOMA
    (6) instruccion_g -> . print PCOMA
    (7) instruccion_g -> . if
    (8) instruccion_g -> . while
    (81) declaracion -> . LET asignacion_simple IGUAL auxexp
    (82) declaracion -> . LET MUT asignacion
    (83) declaracion -> . LET asignacion
    (84) asignacion -> . ID IGUAL auxexp
    (85) asignacion -> . ID lista_assign2 IGUAL auxexp
    (86) asignacion -> . ID lista_arr IGUAL auxexp
    (87) asignacion -> . ID lista_arr lista_assign2 IGUAL auxexp
    (192) print -> . PRINT AD LPAR lista_exp RPAR
    (42) if -> . IF exp statement else
    (63) while -> . WHILE exp statement

    LET             shift and go to state 9
    ID              shift and go to state 10
    PRINT           shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13

    init                           shift and go to state 1
    instrucciones_g                shift and go to state 2
    instruccion_g                  shift and go to state 3
    declaracion                    shift and go to state 4
    asignacion                     shift and go to state 5
    print                          shift and go to state 6
    if                             shift and go to state 7
    while                          shift and go to state 8

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones_g .
    (2) instrucciones_g -> instrucciones_g . instruccion_g
    (4) instruccion_g -> . declaracion PCOMA
    (5) instruccion_g -> . asignacion PCOMA
    (6) instruccion_g -> . print PCOMA
    (7) instruccion_g -> . if
    (8) instruccion_g -> . while
    (81) declaracion -> . LET asignacion_simple IGUAL auxexp
    (82) declaracion -> . LET MUT asignacion
    (83) declaracion -> . LET asignacion
    (84) asignacion -> . ID IGUAL auxexp
    (85) asignacion -> . ID lista_assign2 IGUAL auxexp
    (86) asignacion -> . ID lista_arr IGUAL auxexp
    (87) asignacion -> . ID lista_arr lista_assign2 IGUAL auxexp
    (192) print -> . PRINT AD LPAR lista_exp RPAR
    (42) if -> . IF exp statement else
    (63) while -> . WHILE exp statement

    $end            reduce using rule 1 (init -> instrucciones_g .)
    LET             shift and go to state 9
    ID              shift and go to state 10
    PRINT           shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13

    instruccion_g                  shift and go to state 14
    declaracion                    shift and go to state 4
    asignacion                     shift and go to state 5
    print                          shift and go to state 6
    if                             shift and go to state 7
    while                          shift and go to state 8

state 3

    (3) instrucciones_g -> instruccion_g .

    LET             reduce using rule 3 (instrucciones_g -> instruccion_g .)
    ID              reduce using rule 3 (instrucciones_g -> instruccion_g .)
    PRINT           reduce using rule 3 (instrucciones_g -> instruccion_g .)
    IF              reduce using rule 3 (instrucciones_g -> instruccion_g .)
    WHILE           reduce using rule 3 (instrucciones_g -> instruccion_g .)
    $end            reduce using rule 3 (instrucciones_g -> instruccion_g .)


state 4

    (4) instruccion_g -> declaracion . PCOMA

    PCOMA           shift and go to state 15


state 5

    (5) instruccion_g -> asignacion . PCOMA

    PCOMA           shift and go to state 16


state 6

    (6) instruccion_g -> print . PCOMA

    PCOMA           shift and go to state 17


state 7

    (7) instruccion_g -> if .

    LET             reduce using rule 7 (instruccion_g -> if .)
    ID              reduce using rule 7 (instruccion_g -> if .)
    PRINT           reduce using rule 7 (instruccion_g -> if .)
    IF              reduce using rule 7 (instruccion_g -> if .)
    WHILE           reduce using rule 7 (instruccion_g -> if .)
    $end            reduce using rule 7 (instruccion_g -> if .)


state 8

    (8) instruccion_g -> while .

    LET             reduce using rule 8 (instruccion_g -> while .)
    ID              reduce using rule 8 (instruccion_g -> while .)
    PRINT           reduce using rule 8 (instruccion_g -> while .)
    IF              reduce using rule 8 (instruccion_g -> while .)
    WHILE           reduce using rule 8 (instruccion_g -> while .)
    $end            reduce using rule 8 (instruccion_g -> while .)


state 9

    (81) declaracion -> LET . asignacion_simple IGUAL auxexp
    (82) declaracion -> LET . MUT asignacion
    (83) declaracion -> LET . asignacion
    (101) asignacion_simple -> . ID DPUNTOS tipo_var
    (102) asignacion_simple -> . MUT ID DPUNTOS tipo_var
    (103) asignacion_simple -> . ID DPUNTOS ANDSINGLE tipo_var
    (104) asignacion_simple -> . MUT ID DPUNTOS ANDSINGLE tipo_var
    (105) asignacion_simple -> . ID DPUNTOS ANDSINGLE MUT tipo_var
    (106) asignacion_simple -> . MUT ID DPUNTOS ANDSINGLE MUT tipo_var
    (84) asignacion -> . ID IGUAL auxexp
    (85) asignacion -> . ID lista_assign2 IGUAL auxexp
    (86) asignacion -> . ID lista_arr IGUAL auxexp
    (87) asignacion -> . ID lista_arr lista_assign2 IGUAL auxexp

    MUT             shift and go to state 19
    ID              shift and go to state 21

    asignacion_simple              shift and go to state 18
    asignacion                     shift and go to state 20

state 10

    (84) asignacion -> ID . IGUAL auxexp
    (85) asignacion -> ID . lista_assign2 IGUAL auxexp
    (86) asignacion -> ID . lista_arr IGUAL auxexp
    (87) asignacion -> ID . lista_arr lista_assign2 IGUAL auxexp
    (88) lista_assign2 -> . lista_assign2 PUNTO ID
    (89) lista_assign2 -> . PUNTO ID
    (97) lista_arr -> . lista_arr LCOR auxexp RCOR
    (98) lista_arr -> . LCOR auxexp RCOR

    IGUAL           shift and go to state 22
    PUNTO           shift and go to state 25
    LCOR            shift and go to state 26

    lista_assign2                  shift and go to state 23
    lista_arr                      shift and go to state 24

state 11

    (192) print -> PRINT . AD LPAR lista_exp RPAR

    AD              shift and go to state 27


state 12

    (42) if -> IF . exp statement else
    (110) exp -> . LPAR exp RPAR
    (111) exp -> . expmath
    (112) exp -> . expop
    (113) exp -> . exprel
    (114) exp -> . exparr
    (115) exp -> . newarray
    (116) exp -> . expvec
    (117) exp -> . exparam
    (118) exp -> . exppow
    (119) exp -> . expcast
    (120) exp -> . lista_acc
    (121) exp -> . llamada
    (122) exp -> . sentencia
    (123) exp -> . valores
    (124) exp -> . exp PUNTO exp_native
    (125) expmath -> . exp MAS exp
    (126) expmath -> . exp MENOS exp
    (127) expmath -> . exp MULTIPLICACION exp
    (128) expmath -> . exp DIVISION exp
    (129) expmath -> . exp MODULO exp
    (130) expmath -> . MENOS exp
    (133) expop -> . exp AND exp
    (134) expop -> . exp OR exp
    (135) expop -> . AD exp
    (137) exprel -> . exp IGUALI exp
    (138) exprel -> . exp DIF exp
    (139) exprel -> . exp MAYOR exp
    (140) exprel -> . exp MENOR exp
    (141) exprel -> . exp MAYORI exp
    (142) exprel -> . exp MENORI exp
    (152) exparr -> . ID lista_arr
    (155) newarray -> . LCOR lista_exp RCOR
    (156) newarray -> . LCOR auxexp PCOMA exp RCOR
    (153) expvec -> . VEC AD newarray
    (154) expvec -> . VECTOR DPUNTOS DPUNTOS exp_natarr
    (148) exparam -> . MUT ID
    (149) exparam -> . MUT valores
    (150) exparam -> . ANDSINGLE MUT ID
    (151) exparam -> . ANDSINGLE MUT valores
    (131) exppow -> . I64 DPUNTOS DPUNTOS POW LPAR exp COMA exp RPAR
    (132) exppow -> . F64 DPUNTOS DPUNTOS POWF LPAR exp COMA exp RPAR
    (136) expcast -> . exp AS tipo_var
    (92) lista_acc -> . lista_acc PUNTO ID
    (93) lista_acc -> . lista_acc PUNTO exp_native
    (94) lista_acc -> . auxacc
    (176) llamada -> . ID LPAR RPAR
    (177) llamada -> . ID LPAR lista_exp RPAR
    (37) sentencia -> . if
    (38) sentencia -> . match
    (39) sentencia -> . loop
    (40) sentencia -> . while
    (41) sentencia -> . for
    (157) valores -> . ENTERO
    (158) valores -> . DECIMAL
    (159) valores -> . CADENA
    (160) valores -> . BOOLEANO
    (161) valores -> . CARACTER
    (95) auxacc -> . exparr
    (96) auxacc -> . ID
    (42) if -> . IF exp statement else
    (47) match -> . MATCH exp match_statement
    (62) loop -> . LOOP statement
    (63) while -> . WHILE exp statement
    (64) for -> . FOR ID IN foriterative statement

    LPAR            shift and go to state 29
    MENOS           shift and go to state 43
    AD              shift and go to state 44
    ID              shift and go to state 45
    LCOR            shift and go to state 46
    VEC             shift and go to state 47
    VECTOR          shift and go to state 48
    MUT             shift and go to state 49
    ANDSINGLE       shift and go to state 50
    I64             shift and go to state 51
    F64             shift and go to state 52
    ENTERO          shift and go to state 59
    DECIMAL         shift and go to state 60
    CADENA          shift and go to state 61
    BOOLEANO        shift and go to state 62
    CARACTER        shift and go to state 63
    IF              shift and go to state 12
    MATCH           shift and go to state 64
    LOOP            shift and go to state 65
    WHILE           shift and go to state 13
    FOR             shift and go to state 66

    exp                            shift and go to state 28
    expmath                        shift and go to state 30
    expop                          shift and go to state 31
    exprel                         shift and go to state 32
    exparr                         shift and go to state 33
    newarray                       shift and go to state 34
    expvec                         shift and go to state 35
    exparam                        shift and go to state 36
    exppow                         shift and go to state 37
    expcast                        shift and go to state 38
    lista_acc                      shift and go to state 39
    llamada                        shift and go to state 40
    sentencia                      shift and go to state 41
    valores                        shift and go to state 42
    auxacc                         shift and go to state 53
    if                             shift and go to state 54
    match                          shift and go to state 55
    loop                           shift and go to state 56
    while                          shift and go to state 57
    for                            shift and go to state 58

state 13

    (63) while -> WHILE . exp statement
    (110) exp -> . LPAR exp RPAR
    (111) exp -> . expmath
    (112) exp -> . expop
    (113) exp -> . exprel
    (114) exp -> . exparr
    (115) exp -> . newarray
    (116) exp -> . expvec
    (117) exp -> . exparam
    (118) exp -> . exppow
    (119) exp -> . expcast
    (120) exp -> . lista_acc
    (121) exp -> . llamada
    (122) exp -> . sentencia
    (123) exp -> . valores
    (124) exp -> . exp PUNTO exp_native
    (125) expmath -> . exp MAS exp
    (126) expmath -> . exp MENOS exp
    (127) expmath -> . exp MULTIPLICACION exp
    (128) expmath -> . exp DIVISION exp
    (129) expmath -> . exp MODULO exp
    (130) expmath -> . MENOS exp
    (133) expop -> . exp AND exp
    (134) expop -> . exp OR exp
    (135) expop -> . AD exp
    (137) exprel -> . exp IGUALI exp
    (138) exprel -> . exp DIF exp
    (139) exprel -> . exp MAYOR exp
    (140) exprel -> . exp MENOR exp
    (141) exprel -> . exp MAYORI exp
    (142) exprel -> . exp MENORI exp
    (152) exparr -> . ID lista_arr
    (155) newarray -> . LCOR lista_exp RCOR
    (156) newarray -> . LCOR auxexp PCOMA exp RCOR
    (153) expvec -> . VEC AD newarray
    (154) expvec -> . VECTOR DPUNTOS DPUNTOS exp_natarr
    (148) exparam -> . MUT ID
    (149) exparam -> . MUT valores
    (150) exparam -> . ANDSINGLE MUT ID
    (151) exparam -> . ANDSINGLE MUT valores
    (131) exppow -> . I64 DPUNTOS DPUNTOS POW LPAR exp COMA exp RPAR
    (132) exppow -> . F64 DPUNTOS DPUNTOS POWF LPAR exp COMA exp RPAR
    (136) expcast -> . exp AS tipo_var
    (92) lista_acc -> . lista_acc PUNTO ID
    (93) lista_acc -> . lista_acc PUNTO exp_native
    (94) lista_acc -> . auxacc
    (176) llamada -> . ID LPAR RPAR
    (177) llamada -> . ID LPAR lista_exp RPAR
    (37) sentencia -> . if
    (38) sentencia -> . match
    (39) sentencia -> . loop
    (40) sentencia -> . while
    (41) sentencia -> . for
    (157) valores -> . ENTERO
    (158) valores -> . DECIMAL
    (159) valores -> . CADENA
    (160) valores -> . BOOLEANO
    (161) valores -> . CARACTER
    (95) auxacc -> . exparr
    (96) auxacc -> . ID
    (42) if -> . IF exp statement else
    (47) match -> . MATCH exp match_statement
    (62) loop -> . LOOP statement
    (63) while -> . WHILE exp statement
    (64) for -> . FOR ID IN foriterative statement

    LPAR            shift and go to state 29
    MENOS           shift and go to state 43
    AD              shift and go to state 44
    ID              shift and go to state 45
    LCOR            shift and go to state 46
    VEC             shift and go to state 47
    VECTOR          shift and go to state 48
    MUT             shift and go to state 49
    ANDSINGLE       shift and go to state 50
    I64             shift and go to state 51
    F64             shift and go to state 52
    ENTERO          shift and go to state 59
    DECIMAL         shift and go to state 60
    CADENA          shift and go to state 61
    BOOLEANO        shift and go to state 62
    CARACTER        shift and go to state 63
    IF              shift and go to state 12
    MATCH           shift and go to state 64
    LOOP            shift and go to state 65
    WHILE           shift and go to state 13
    FOR             shift and go to state 66

    exp                            shift and go to state 67
    expmath                        shift and go to state 30
    expop                          shift and go to state 31
    exprel                         shift and go to state 32
    exparr                         shift and go to state 33
    newarray                       shift and go to state 34
    expvec                         shift and go to state 35
    exparam                        shift and go to state 36
    exppow                         shift and go to state 37
    expcast                        shift and go to state 38
    lista_acc                      shift and go to state 39
    llamada                        shift and go to state 40
    sentencia                      shift and go to state 41
    valores                        shift and go to state 42
    auxacc                         shift and go to state 53
    if                             shift and go to state 54
    match                          shift and go to state 55
    loop                           shift and go to state 56
    while                          shift and go to state 57
    for                            shift and go to state 58

state 14

    (2) instrucciones_g -> instrucciones_g instruccion_g .

    LET             reduce using rule 2 (instrucciones_g -> instrucciones_g instruccion_g .)
    ID              reduce using rule 2 (instrucciones_g -> instrucciones_g instruccion_g .)
    PRINT           reduce using rule 2 (instrucciones_g -> instrucciones_g instruccion_g .)
    IF              reduce using rule 2 (instrucciones_g -> instrucciones_g instruccion_g .)
    WHILE           reduce using rule 2 (instrucciones_g -> instrucciones_g instruccion_g .)
    $end            reduce using rule 2 (instrucciones_g -> instrucciones_g instruccion_g .)


state 15

    (4) instruccion_g -> declaracion PCOMA .

    LET             reduce using rule 4 (instruccion_g -> declaracion PCOMA .)
    ID              reduce using rule 4 (instruccion_g -> declaracion PCOMA .)
    PRINT           reduce using rule 4 (instruccion_g -> declaracion PCOMA .)
    IF              reduce using rule 4 (instruccion_g -> declaracion PCOMA .)
    WHILE           reduce using rule 4 (instruccion_g -> declaracion PCOMA .)
    $end            reduce using rule 4 (instruccion_g -> declaracion PCOMA .)


state 16

    (5) instruccion_g -> asignacion PCOMA .

    LET             reduce using rule 5 (instruccion_g -> asignacion PCOMA .)
    ID              reduce using rule 5 (instruccion_g -> asignacion PCOMA .)
    PRINT           reduce using rule 5 (instruccion_g -> asignacion PCOMA .)
    IF              reduce using rule 5 (instruccion_g -> asignacion PCOMA .)
    WHILE           reduce using rule 5 (instruccion_g -> asignacion PCOMA .)
    $end            reduce using rule 5 (instruccion_g -> asignacion PCOMA .)


state 17

    (6) instruccion_g -> print PCOMA .

    LET             reduce using rule 6 (instruccion_g -> print PCOMA .)
    ID              reduce using rule 6 (instruccion_g -> print PCOMA .)
    PRINT           reduce using rule 6 (instruccion_g -> print PCOMA .)
    IF              reduce using rule 6 (instruccion_g -> print PCOMA .)
    WHILE           reduce using rule 6 (instruccion_g -> print PCOMA .)
    $end            reduce using rule 6 (instruccion_g -> print PCOMA .)


state 18

    (81) declaracion -> LET asignacion_simple . IGUAL auxexp

    IGUAL           shift and go to state 68


state 19

    (82) declaracion -> LET MUT . asignacion
    (102) asignacion_simple -> MUT . ID DPUNTOS tipo_var
    (104) asignacion_simple -> MUT . ID DPUNTOS ANDSINGLE tipo_var
    (106) asignacion_simple -> MUT . ID DPUNTOS ANDSINGLE MUT tipo_var
    (84) asignacion -> . ID IGUAL auxexp
    (85) asignacion -> . ID lista_assign2 IGUAL auxexp
    (86) asignacion -> . ID lista_arr IGUAL auxexp
    (87) asignacion -> . ID lista_arr lista_assign2 IGUAL auxexp

    ID              shift and go to state 70

    asignacion                     shift and go to state 69

state 20

    (83) declaracion -> LET asignacion .

    PCOMA           reduce using rule 83 (declaracion -> LET asignacion .)


state 21

    (101) asignacion_simple -> ID . DPUNTOS tipo_var
    (103) asignacion_simple -> ID . DPUNTOS ANDSINGLE tipo_var
    (105) asignacion_simple -> ID . DPUNTOS ANDSINGLE MUT tipo_var
    (84) asignacion -> ID . IGUAL auxexp
    (85) asignacion -> ID . lista_assign2 IGUAL auxexp
    (86) asignacion -> ID . lista_arr IGUAL auxexp
    (87) asignacion -> ID . lista_arr lista_assign2 IGUAL auxexp
    (88) lista_assign2 -> . lista_assign2 PUNTO ID
    (89) lista_assign2 -> . PUNTO ID
    (97) lista_arr -> . lista_arr LCOR auxexp RCOR
    (98) lista_arr -> . LCOR auxexp RCOR

    DPUNTOS         shift and go to state 71
    IGUAL           shift and go to state 22
    PUNTO           shift and go to state 25
    LCOR            shift and go to state 26

    lista_assign2                  shift and go to state 23
    lista_arr                      shift and go to state 24

state 22

    (84) asignacion -> ID IGUAL . auxexp
    (108) auxexp -> . expstruct
    (109) auxexp -> . exp
    (143) expstruct -> . lista_classtype LLLAV lista_att RLLAV
    (144) expstruct -> . lista_classtype LLLAV RLLAV
    (145) expstruct -> . lista_classtype DPUNTOS DPUNTOS llamada
    (110) exp -> . LPAR exp RPAR
    (111) exp -> . expmath
    (112) exp -> . expop
    (113) exp -> . exprel
    (114) exp -> . exparr
    (115) exp -> . newarray
    (116) exp -> . expvec
    (117) exp -> . exparam
